# SpaceInvaders3D

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt
release/assets/shaders/: frag.fs  frag_hud.fs  vert.vs  vert_cube.vs
src/: main.cpp
src/assets/models/: barricade.FBX  bullet.FBX  invader.FBX  obstacle.FBX  plane.FBX  player.FBX  player_ship.FBX  test.FBX  testobj.mtl
src/assets/shaders/: frag.fs  frag_spec.fs  frag_spec_tex.fs  vert.vs  vert_cube.vs  vert_hud.vs  vert_tex.vs
src/headers/: Barricade.h  Bullet.h  Camera.h  Cubemap.h  GameState.h  Invader.h  Mesh.h  Model.h  Plane.h  Player.h  Shader.h  Vector.h  Vertex.h  _Plane.h
